# shruti

./: .dockerignore  .env.example  .gitignore  .graphifyignore  AGENTS.md  CODEX_TASK.md  DEPLOY.md  Dockerfile  LIPI_FULL_CONTEXT.md  LLM_CONTEXT.md  README.md  claude.md  render.yaml
backend/: .env.example  README.md  backfill_provenance.py  pyproject.toml  requirements.txt  seed_admin.py  seed_demo.py  test_full_flow.py  test_pipeline.py
backend/app/: main.py
backend/app/api/: routes_analytics.py  routes_audio.py  routes_audit.py  routes_auth.py  routes_billing.py  routes_clinics.py  routes_documents.py  routes_fact_review.py  routes_health.py  routes_learning.py  routes_notes.py  routes_profile.py  routes_public.py  routes_reviewer.py  routes_sessions.py  routes_tasks.py  routes_tpa.py  routes_whatsapp.py  routes_ws.py
backend/app/schemas/: consultation.py  user.py
backend/docs/: EXTRACTION_AUDIT.md  EXTRACTION_GOLDEN.md  EXTRACTION_PIPELINE.md
backend/eval/: __init__.py  run_eval.py
backend/prompts/: cds_suggestions.txt  clinical_extraction.txt  memory_resolver.txt  soap_generation.txt
backend/samples/: eval_results.json  transcript_demo.txt  transcript_demo_gt.json  transcript_simple.txt
backend/scripts/: fetch_expanded_ontology.py  fetch_ontology_data.py
backend/tests/: test_doctor_product_metrics.py  test_e2e.py  test_extraction_reliability.py  test_learning.py  test_memory_soap_separation.py  test_phase2a.py  test_routes.py  test_security_hardening.py  test_services.py  test_whatsapp_sharing.py  test_zero_hallucination_provenance.py
(+162 files in other folders)
