[project]
name = "shruti-backend"
version = "0.1.0"
description = "SHRUTI: Multilingual Clinical Documentation Research Prototype — backend"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "google-genai>=1.74.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.14.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "spacy>=3.8.0,<4.0.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
